# gongkao-ai

./: .dockerignore  .gitattributes  .gitignore  .prettierignore  DEPLOY.md  PLAN.md  README.md  docker-compose.yml  eslint.config.js  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.github/workflows/: ci.yml
backend/: .dockerignore  .env.example  Dockerfile  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/api/: auth.py  chat.py  interview.py  jobs.py  kb.py  prompts.py  usage.py
backend/app/core/: agent.py  config.py  embedding.py  graphrag.py  llm.py  prompts_store.py  security.py  tools.py  usage.py
backend/app/db/: base.py  init_db.py  models.py  session.py
backend/app/scripts/: bootstrap.py  compute_value.py  ingest_jobs.py  ingest_kb.py  seed_prompts.py  seed_users.py
backend/tests/: test_llm.py  test_security.py  test_tools.py
deploy/: .env.prod.example  Caddyfile  docker-compose.prod.yml  setup.sh
frontend/apps/web/: Dockerfile  index.html  nginx.conf  package.json  playwright.config.ts  vite.config.ts  vitest.config.ts
frontend/apps/web/e2e/: app.spec.ts
frontend/apps/web/src/: index.css  main.tsx
frontend/apps/web/src/app/: AuthGate.tsx  ErrorBoundary.tsx  NotFound.tsx  router.tsx  routes.tsx
frontend/apps/web/src/app/guards/: RequireAuth.tsx
frontend/apps/web/src/app/layout/: AppHeader.tsx  AppLayout.tsx  AppSider.tsx
frontend/apps/web/src/features/auth/: ForbiddenPage.tsx  LoginPage.tsx
frontend/apps/web/src/features/chat/: api.ts  (+5 more)
frontend/apps/web/src/stores/: auth.ts  conversations.test.ts  conversations.ts
(+25 files in other folders)
